fixing layout bug

--- a/css/queries.css
+++ b/css/queries.css
@@ -152,8 +152,7 @@
 		background-image: url(desk-mobile.jpg) !important;
 		background-repeat: no-repeat !important;
       background-position: center !important;
-      width: 300px !important;
-      height: 250px !important;
+      
 	}
 }
 
